--- a/deno.json
+++ b/deno.json
@@ -11,5 +11,8 @@
     "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/cli": "jsr:@std/cli@^1.0.14",
     "@std/fmt": "jsr:@std/fmt@^1.0.6"
+  },
+  "fmt": {
+    "semiColons": false
   }
 }
