--- a/.bmp.yml
+++ b/.bmp.yml
@@ -1,7 +1,5 @@
-version: 0.3.0
+version: 0.4.0
 commit: "chore: bump to %.%.%"
 files:
-  README.md:
-    - gzip-size %.%.%
-  deno.json:
-    - '"version": "%.%.%"'
+  README.md: gzip-size %.%.%
+  deno.json: '"version": "%.%.%"'
